[SC-4095] Edit Record email buttons are misaligned Fixed alignment of email buttons

--- a/sugarcrm/styleguide/less/sugar-specific/rtl.less
+++ b/sugarcrm/styleguide/less/sugar-specific/rtl.less
@@ -228,7 +228,7 @@ html.rtl {
             .edit .control-group .btn-toolbar {
                 right: auto;
                 left: 0;
-                margin: 0 5px 0 0 !important;
+                margin: 0 5px 0 11px;
             }
             .control-group.email .btn-toolbar .btn-group {
                 float: right;
